testdata/baselines/reference/submodule/conformance/thisPropertyAssignmentCircular.errors.txt
thisPropertyAssignmentCircular.js(3,14): error TS2339: Property 'foo' does not exist on type 'Foo'.
thisPropertyAssignmentCircular.js(6,14): error TS2339: Property 'foo' does not exist on type 'Foo'.
thisPropertyAssignmentCircular.js(6,25): error TS2339: Property 'foo' does not exist on type 'Foo'.
thisPropertyAssignmentCircular.js(9,14): error TS2339: Property 'foo' does not exist on type 'Foo'.


==== thisPropertyAssignmentCircular.js (4 errors) ====
    export class Foo {
        constructor() {
            this.foo = "Hello";
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Foo'.
        }
        slicey() {
            this.foo = this.foo.slice();
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Foo'.
                            ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Foo'.
        }
        m() {
            this.foo
                 ~~~
!!! error TS2339: Property 'foo' does not exist on type 'Foo'.
        }
    }
    
    /** @class */
    function C() {
        this.x = 0;
        this.x = function() { this.x.toString(); }
    }
    